New collection added and also Authentication to protect POST, PUT and DELETE methods.
